Fix overflowing content breaking small screens

--- a/_includes/critical.css
+++ b/_includes/critical.css
@@ -227,6 +227,7 @@ article li+li {
   padding-right: 1rem;
   padding-top: 2rem;
   padding-bottom: 4rem;
+  overflow: hidden;
 }
 
 .post-image {
